infra/aws/env/prod/network/main/internet_gateway.tf
resource "aws_internet_gateway" "this" {
    vpc_id   = aws_vpc.this.id

    tags     = {
        "Name" = "minoru-saito-igw-later"
    }
}
